<resources>
    <string name="app_name">Flight Planning System</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="calculate">Calculate</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="cost">Cost</string>
    <string name="distance">Distance</string>
    <string name="add_route">Add Route</string>
    <string name="add_route">Add Route</string>
</resources>